# chaos_fractal

./: .gitignore  Cargo.toml  README.md  generate.py  tests.ipynb
src/: main.rs  shader.wgsl
