[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "8.0.0"
fastrand = "2.3.0"

wgpu = "27.0.1"
tokio = { version = "1.48.0", features = ["rt", "macros"] }

time = "0.3.25"

[profile.release]
debug = true
